--- a/restaurantService/src/main/resources/application.yml
+++ b/restaurantService/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: RESTAURANT-SERVICE
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/Restaurant_Service
     username: postgres
     password: Whadmp@123
     driver-class-name: org.postgresql.Driver
