--- a/userService/src/main/resources/application.yml
+++ b/userService/src/main/resources/application.yml
@@ -2,11 +2,10 @@ spring:
   application:
     name: USER-SERVICE
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/UserServiceNew
     username: postgres
     password: Whadmp@123
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,4 +20,16 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: karlebn19.comp@coeptech.ac.in
+    password: Whadmp@123
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 
