--- a/ordersService/src/main/resources/application.yml
+++ b/ordersService/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: ORDER-SERVICE
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/OrderServiceNew
     username: postgres
     password: Whadmp@123
     driver-class-name: org.postgresql.Driver
